<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_1"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/opcion_1" />
        <item
            android:id="@+id/nav_2"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/opcion_2" />
        <item
            android:id="@+id/nav_3"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/opcion_3" />
    </group>
    <item android:title="@string/acciones_adicionales">
        <menu>
            <item
                android:id="@+id/nav_preferencias"
                android:icon="@android:drawable/ic_menu_manage"
                android:title="@string/preferences" />
            <item
                android:id="@+id/nav_compartir"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/share" />
        </menu>
    </item>
</menu>